@@ -1,6 +1,7 @@
 TODO:
 
-- Check how to build atmosphere with the preprocessAtmo function from inside OSG.
+- find how to implement proland terrain exercise2 properly with OSG canvas.
+
 - http://jsbsim.sourceforge.net/ for Fhight dynamic model.
 - in lunagen add support to specify hashcode manually
 - in lunagen for methods with overloads, avoid calling the typechecker method twice.
