@@ -103,3 +103,4 @@
 - Added GL canvas implementation to test Proland Terrain exercise 2. This is working as expected in this implementation (eg. proland_exercise2_gl)
 - Added support for proland terrain exercise3 rendering.
 - Added support for proland terrain exercise4 rendering.
+- Added support for proland terrain exercise5 rendering.
